refactor(commands): enhance AddPhotoCommand and CreateReportPhotoResource with equals, hashCode, and toString methods